fixed squashed image

--- a/portfolio.css
+++ b/portfolio.css
@@ -82,7 +82,7 @@ html{
 }
 
 #mainimage{
-	height: 300px;
+	height: 317px;
 	width: 300px; 
 }
 
